--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="https://www.instagram.com/" class="last-child"><i class="fab fa-instagram"></i></a>
       </div> <!-- end of socialMedia div -->
     </div> <!-- end of contactBar div -->
-    <div class="container navigation">
+    <div class="navigation">
       <h1>F<span>ortune</span></h1>
       <nav>
         <a href="#" class="active">Home</a>
@@ -51,173 +51,172 @@
         </div>
         <a href="#">Contact</a>
       </nav>
-    </div>
-  </div> <!-- end of navigation div -->
-  <div class="inspire">
-    <div class="header">INSPIRE</div>
-    <p>Success is not final; failute is not fatal</p>
-    <button type="button" name="button">Get Started</button>
-  </div> <!-- end of inspire div -->
-  <div class="container">
-    <div class=" welcome">
-      <h1>WELCOME</h1>
-      <hr width="70">
-      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Dolores quae porro consequatur aliquam, incidunt eius magni provident,
-        doloribus omnis minusovident, doloribus omnis minus temporibus perferendis
-        nesciunt..</p>
-      <div class=" wrapper">
-        <div class="left">
-          <img src="images/about-img.png" alt="">
-        </div>
-        <div class="right">
-          <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-          <p class="italic">Dolores quae porro consequatur aliquam, incidunt eius magni provident,
-            doloribus omnis minus ovident</p>
-          <p class="regular">Consectetur adipisicing elit. Dolores quae porro
-            consequatur aliquam, incidunt fugiat. Dolores quae porro consequatur aliquam,
-            incidunt fugiat culpa esse aute nulla. malis nulla duis fugiat</p>
-          <ul>
-            <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur
-              aliquam, incidunt fugiat culpa.</li>
-            <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur
-              aliquam, culpa esse aute nulla.</li>
-            <li><i class="far fa-check-circle"></i>Dolores quae porro esse aute nulla.
-              malis nulla duis fugiat</li>
-          </ul>
-        </div>
-      </div>
-    </div> <!-- end of welcome div -->
-    <div class="ourService">
-      <h1>OUR SERVICES</h1>
-      <hr width="70">
-      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
-        consequatur aliquam, incidunt fugiat culpa esse aute nulla. malis nulla duis
-        fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
-      <div class="row">
-        <div class="column">
-          <div class="image">
-            <img src="images/undraw_maker_launch_crhe.svg" alt="">
-          </div>
-          <h3>Marketing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-            porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
-        </div>
-        <div class="column">
-          <div class="image">
-            <img src="images/undraw_mobile_marketing_iqbr.svg" alt="">
-          </div>
-          <h3>Consulting</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-            porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
-        </div>
-        <div class="column">
-          <div class="image">
-            <img src="images/undraw_scrum_board_cesn.svg" alt="">
-          </div>
-          <h3>Strategy</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-            porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
-        </div>
-      </div>
-    </div> <!-- end of ourService div -->
-    <div class="clients">
-      <h1>CLIENTS</h1>
-      <hr width="70">
-      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.
-        duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
-      <div class="clients-slider">
-        <img src="images/clients/client-1.png" alt="">
-        <img src="images/clients/client-2.png" alt="">
-        <img src="images/clients/client-3.png" alt="">
-        <img src="images/clients/client-4.png" alt="">
-        <img src="images/clients/client-5.png" alt="">
-        <img src="images/clients/client-6.png" alt="">
-        <img src="images/clients/client-1.png" alt="">
-        <img src="images/clients/client-2.png" alt="">
-        <img src="images/clients/client-3.png" alt="">
-        <img src="images/clients/client-4.png" alt="">
-        <img src="images/clients/client-5.png" alt="">
-        <img src="images/clients/client-6.png" alt="">
-      </div> <!-- end of clients-slider div -->
-    </div> <!-- end of clients div -->
-    <div class="testimonials">
-      <h1>TESTIMONIALS</h1>
-      <hr width="70">
-      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.
-        duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
-      <div class="testimonials-slider">
-
-        <div class="testimonials-item">
-          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
-            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
-            ipsum velit export irure minim illum fore</p>
-          <h3>Mario James</h3>
-          <p class="job-title">CEO & Founder</p>
-        </div> <!-- end of column div -->
-        <div class="testimonials-item">
-          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
-            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
-            ipsum velit export irure minim illum fore</p>
-          <h3>Finton Gofnes</h3>
-          <p class="job-title">CTO</p>
-        </div> <!-- end of column div -->
-        <div class="testimonials-item">
-          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
-            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
-            ipsum velit export irure minim illum fore</p>
-          <h3>Marcus Kell</h3>
-          <p class="job-title">Marketing</p>
-        </div> <!-- end of column div -->
-        <div class="testimonials-item">
-          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
-            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
-            ipsum velit export irure minim illum fore</p>
-          <h3>Williams Belly</h3>
-          <p class="job-title">Accounts</p>
-        </div> <!-- end of column div -->
-        <div class="testimonials-item">
-          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
-            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
-            ipsum velit export irure minim illum fore</p>
-          <h3>Larry Hanson</h3>
-          <p class="job-title">Investor</p>
-        </div> <!-- end of column div -->
-
-      </div> <!-- end of testimonials-slider div -->
-    </div> <!-- end of testimonials div -->
-  </div> <!-- end of container div -->
-  <div class="get">
+    </div> <!-- end of navigation div -->
+    <div id="inspire" class="inspire">
+      <div class="header">INSPIRE</div>
+      <p>Success is not final; failute is not fatal</p>
+      <button type="button" name="button">Get Started</button>
+    </div> <!-- end of inspire div -->
     <div class="container">
-      <h2>Get Our Service</h2>
-      <div class="wrap">
-        <div class="text">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-            porro consequatur aliquam, incidunt fugiat culpa esse aute nulla cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class=" welcome">
+        <h1>WELCOME</h1>
+        <hr width="70">
+        <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Dolores quae porro consequatur aliquam, incidunt eius magni provident,
+          doloribus omnis minusovident, doloribus omnis minus temporibus perferendis
+          nesciunt..</p>
+        <div class=" wrapper">
+          <div class="left">
+            <img src="images/about-img.png" alt="">
+          </div>
+          <div class="right">
+            <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+            <p class="italic">Dolores quae porro consequatur aliquam, incidunt eius magni provident,
+              doloribus omnis minus ovident</p>
+            <p class="regular">Consectetur adipisicing elit. Dolores quae porro
+              consequatur aliquam, incidunt fugiat. Dolores quae porro consequatur aliquam,
+              incidunt fugiat culpa esse aute nulla. malis nulla duis fugiat</p>
+            <ul>
+              <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur
+                aliquam, incidunt fugiat culpa.</li>
+              <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur
+                aliquam, culpa esse aute nulla.</li>
+              <li><i class="far fa-check-circle"></i>Dolores quae porro esse aute nulla.
+                malis nulla duis fugiat</li>
+            </ul>
+          </div>
         </div>
-        <div class="btn">
-          <button type="button" name="button">Contact Us</button>
+      </div> <!-- end of welcome div -->
+      <div class="ourService">
+        <h1>OUR SERVICES</h1>
+        <hr width="70">
+        <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
+          consequatur aliquam, incidunt fugiat culpa esse aute nulla. malis nulla duis
+          fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+        <div class="row">
+          <div class="column">
+            <div class="image">
+              <img src="images/undraw_maker_launch_crhe.svg" alt="">
+            </div>
+            <h3>Marketing</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+              porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+          </div>
+          <div class="column">
+            <div class="image">
+              <img src="images/undraw_mobile_marketing_iqbr.svg" alt="">
+            </div>
+            <h3>Consulting</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+              porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+          </div>
+          <div class="column">
+            <div class="image">
+              <img src="images/undraw_scrum_board_cesn.svg" alt="">
+            </div>
+            <h3>Strategy</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+              porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+          </div>
         </div>
-      </div>
+      </div> <!-- end of ourService div -->
+      <div class="clients">
+        <h1>CLIENTS</h1>
+        <hr width="70">
+        <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.
+          duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+        <div class="clients-slider">
+          <img src="images/clients/client-1.png" alt="">
+          <img src="images/clients/client-2.png" alt="">
+          <img src="images/clients/client-3.png" alt="">
+          <img src="images/clients/client-4.png" alt="">
+          <img src="images/clients/client-5.png" alt="">
+          <img src="images/clients/client-6.png" alt="">
+          <img src="images/clients/client-1.png" alt="">
+          <img src="images/clients/client-2.png" alt="">
+          <img src="images/clients/client-3.png" alt="">
+          <img src="images/clients/client-4.png" alt="">
+          <img src="images/clients/client-5.png" alt="">
+          <img src="images/clients/client-6.png" alt="">
+        </div> <!-- end of clients-slider div -->
+      </div> <!-- end of clients div -->
+      <div class="testimonials">
+        <h1>TESTIMONIALS</h1>
+        <hr width="70">
+        <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.
+          duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+        <div class="testimonials-slider">
+
+          <div class="testimonials-item">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+              culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+              ipsum velit export irure minim illum fore</p>
+            <h3>Mario James</h3>
+            <p class="job-title">CEO & Founder</p>
+          </div> <!-- end of column div -->
+          <div class="testimonials-item">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+              culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+              ipsum velit export irure minim illum fore</p>
+            <h3>Finton Gofnes</h3>
+            <p class="job-title">CTO</p>
+          </div> <!-- end of column div -->
+          <div class="testimonials-item">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+              culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+              ipsum velit export irure minim illum fore</p>
+            <h3>Marcus Kell</h3>
+            <p class="job-title">Marketing</p>
+          </div> <!-- end of column div -->
+          <div class="testimonials-item">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+              culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+              ipsum velit export irure minim illum fore</p>
+            <h3>Williams Belly</h3>
+            <p class="job-title">Accounts</p>
+          </div> <!-- end of column div -->
+          <div class="testimonials-item">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+              culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+              ipsum velit export irure minim illum fore</p>
+            <h3>Larry Hanson</h3>
+            <p class="job-title">Investor</p>
+          </div> <!-- end of column div -->
+
+        </div> <!-- end of testimonials-slider div -->
+      </div> <!-- end of testimonials div -->
     </div> <!-- end of container div -->
-  </div> <!-- end of get div -->
-  <div class="footer">
-    <div class="copyright">
-      &copy Copyright <span>Fortune</span>. All Rights Reserved
+    <div class="get">
+      <div class="container">
+        <h2>Get Our Service</h2>
+        <div class="wrap">
+          <div class="text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+              porro consequatur aliquam, incidunt fugiat culpa esse aute nulla cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="btn">
+            <button type="button" name="button">Contact Us</button>
+          </div>
+        </div>
+      </div> <!-- end of container div -->
+    </div> <!-- end of get div -->
+    <div class="footer">
+      <div class="copyright">
+        &copy Copyright <span>Fortune</span>. All Rights Reserved
+      </div>
+      <div class="template">
+        Template by <a href="#">WebThemez</a>
+      </div>
+    </div> <!-- en of footer div -->
+    <div class="btn-bottom">
+      <button type="button" name="button"><i class="fas fa-chevron-up"></i></button>
     </div>
-    <div class="template">
-      Template by <a href="#">WebThemez</a>
-    </div>
-  </div> <!-- en of footer div -->
-  <div class="btn-bottom">
-    <button type="button" name="button"><i class="fas fa-chevron-up"></i></button>
-  </div>
-  <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-  <script type="text/javascript" src="js/slick.min.js"></script>
-  <script type="text/javascript" src="js/function.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script type="text/javascript" src="js/function.js"></script>
 </body>
 
 </html>
